feat(job-normalizer): improve multi-domain normalization rules